fix extra credit grades

--- a/w2v_hw/w2v_hw.ipynb
+++ b/w2v_hw/w2v_hw.ipynb
@@ -727,7 +727,7 @@
    "source": [
     "We first initalize a CBOW model of vocab_size 1000 (the top 1000 words we limited it to) and train a vector space model with embbeding dimension=10, for the sake of shortening the training time. Note that a dimension=10 may not be optimal, and will be a parameter that you can potentially tune in Question 2.\n",
     "\n",
-    "We then train the model for 3 epoches, with batch_size of 50 (there are 4404634 training samples). These are also parameters that you can potentially tune.\n",
+    "We then train the model for 3 epoches, with batch_size of 40 (there are 4404634 training samples). These are also parameters that you can potentially tune.\n",
     "\n",
     "This [link](https://stats.stackexchange.com/questions/164876/tradeoff-batch-size-vs-number-of-iterations-to-train-a-neural-network) provides a nice discussion about the relationship between batch size and iterations. [Here](https://stackoverflow.com/questions/4752626/epoch-vs-iteration-when-training-neural-networks) is a discussion for the definition of epoch, iteration, and batch size."
    ]
@@ -2130,7 +2130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Extra Credit: Negative Sampling (20%)\n",
+    "# Extra Credit: Negative Sampling (10%)\n",
     "\n",
     "Finally, for those of you who want to take on the challenge, I encourage you to attempt to implement negative sampling! Recall the negative sampling loss is defined as:\n",
     "\n",
@@ -2193,9 +2193,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:pytorch-rg]",
+   "display_name": "Python [conda env:pytorch_w2v]",
    "language": "python",
-   "name": "conda-env-pytorch-rg-py"
+   "name": "conda-env-pytorch_w2v-py"
   },
   "language_info": {
    "codemirror_mode": {
